# DL-VINS-Factory-ROS2

./: .gitignore  .gitmodules  README.md
DL-VINS/src/camera_models/: CMakeLists.txt
DL-VINS/src/camera_models/include/camodocal/calib/: CameraCalibration.h
DL-VINS/src/camera_models/include/camodocal/camera_models/: Camera.h  CataCamera.h  EquidistantCamera.h  PinholeCamera.h  PinholeFullCamera.h  ScaramuzzaCamera.h
DL-VINS/src/camera_models/include/camodocal/chessboard/: Chessboard.h  (+3 more)
DL-VINS/src/camera_models/src/: intrinsic_calib.cc
DL-VINS/src/camera_models/src/calib/: CameraCalibration.cc
DL-VINS/src/camera_models/src/camera_models/: Camera.cc  CameraFactory.cc  CataCamera.cc  CostFunctionFactory.cc  EquidistantCamera.cc  PinholeCamera.cc  PinholeFullCamera.cc  ScaramuzzaCamera.cc
DL-VINS/src/camera_models/src/chessboard/: Chessboard.cc
DL-VINS/src/camera_models/src/gpl/: gpl.cc
DL-VINS/src/dl_vins/: CMakeLists.txt  package.xml
DL-VINS/src/dl_vins/config/: dl_vins_stereo.rviz
DL-VINS/src/dl_vins/config/botanic_garden/: dalsa_rgb0_pinhole_down.yaml  mono_aliked_lightglue.yaml  mono_aliked_lightglue_color.yaml  mono_aliked_lk.yaml  mono_aliked_lk_color.yaml  mono_gftt_cpu.yaml  mono_gftt_cpu_color.yaml  mono_raco_lightglue.yaml  mono_raco_lightglue_color.yaml  mono_raco_lk.yaml  mono_raco_lk_color.yaml  mono_sift_cpu_lightglue.yaml  mono_sift_cpu_lightglue_color.yaml  mono_sift_cpu_lk.yaml  mono_sift_cpu_lk_color.yaml  mono_superpoint_lightglue.yaml  mono_superpoint_lightglue_color.yaml  mono_superpoint_lk.yaml  mono_superpoint_lk_color.yaml  mono_xfeat_lightglue.yaml  mono_xfeat_lightglue_color.yaml  mono_xfeat_lk.yaml  mono_xfeat_lk_color.yaml  stereo_aliked_lightglue.yaml  stereo_aliked_lightglue_color.yaml  stereo_aliked_lk.yaml  stereo_aliked_lk_color.yaml  stereo_gftt_cpu.yaml  stereo_gftt_cpu_color.yaml  stereo_raco_lightglue.yaml  stereo_raco_lightglue_color.yaml  stereo_raco_lk.yaml  stereo_raco_lk_color.yaml  stereo_sift_cpu_lightglue.yaml  stereo_sift_cpu_lightglue_color.yaml  stereo_sift_cpu_lk.yaml  stereo_sift_cpu_lk_color.yaml  stereo_superpoint_lightglue.yaml  stereo_superpoint_lightglue_color.yaml  stereo_superpoint_lk.yaml  (+5 more)
DL-VINS/src/dl_vins/config/euroc/: cam0_mei.yaml  mono_aliked_lightglue.yaml  mono_aliked_lk.yaml  mono_gftt_cpu.yaml  mono_raco_lightglue.yaml  mono_raco_lk.yaml  mono_sift_cpu_lightglue.yaml  mono_sift_cpu_lk.yaml  mono_superpoint_lightglue.yaml  mono_superpoint_lk.yaml  mono_xfeat_lightglue.yaml  mono_xfeat_lk.yaml  stereo_aliked_lightglue.yaml  stereo_aliked_lk.yaml  stereo_gftt_cpu.yaml  stereo_raco_lightglue.yaml  stereo_raco_lk.yaml  stereo_sift_cpu_lightglue.yaml  stereo_sift_cpu_lk.yaml  stereo_superpoint_lightglue.yaml  stereo_superpoint_lk.yaml  stereo_xfeat_lightglue.yaml  stereo_xfeat_lk.yaml
DL-VINS/src/dl_vins/config/ntu_viral/: mono_aliked_lightglue.yaml  mono_aliked_lk.yaml  mono_gftt_cpu.yaml  mono_raco_lightglue.yaml  mono_raco_lk.yaml  mono_sift_cpu_lightglue.yaml  mono_sift_cpu_lk.yaml  mono_superpoint_lightglue.yaml  mono_superpoint_lk.yaml  mono_xfeat_lightglue.yaml  mono_xfeat_lk.yaml  stereo_aliked_lightglue.yaml  stereo_aliked_lk.yaml  stereo_gftt_cpu.yaml  stereo_raco_lightglue.yaml  stereo_raco_lk.yaml  stereo_sift_cpu_lightglue.yaml  stereo_sift_cpu_lk.yaml  stereo_superpoint_lightglue.yaml  stereo_superpoint_lk.yaml  stereo_xfeat_lightglue.yaml  stereo_xfeat_lk.yaml
DL-VINS/src/dl_vins/config/subt_mrs/: cam_rc7_mei.yaml  mono_aliked_lightglue.yaml  mono_aliked_lk.yaml  mono_gftt_cpu.yaml  mono_raco_lightglue.yaml  mono_raco_lk.yaml  mono_superpoint_lightglue.yaml  mono_superpoint_lk.yaml  mono_xfeat_lightglue.yaml  mono_xfeat_lk.yaml
DL-VINS/src/dl_vins/include/: dl_vins_component.hpp  feature_tracker_component.hpp
DL-VINS/src/dl_vins/include/backend/: backend_interface.hpp  ceres_backend.hpp  imu_factor.hpp  marginalization_factor.hpp  pose_manifold.hpp  reprojection_factor.hpp
DL-VINS/src/dl_vins/include/estimator/: estimator.hpp
DL-VINS/src/dl_vins/include/feature/: dense_extractor.hpp  descriptor_head.hpp  descriptor_matcher.hpp  feature_extractor.hpp  feature_manager.hpp  feature_struct.hpp  feature_tracker.hpp  lightglue_matcher.hpp  triangulation.hpp  type_conv_helper.cuh
DL-VINS/src/dl_vins/include/imu/: integration_base.hpp
DL-VINS/src/dl_vins/include/initial/: initial_alignment.hpp  initial_sfm.hpp  motion_estimator.hpp
DL-VINS/src/dl_vins/include/utility/: debug_visualizer.hpp  math_util.hpp  metrics_logger.hpp  trt_common.hpp
DL-VINS/src/dl_vins/launch/: botanic_garden_mono.launch.py  botanic_garden_rgb_mono.launch.py  botanic_garden_rgb_stereo.launch.py  botanic_garden_stereo.launch.py  euroc_mono.launch.py  euroc_stereo.launch.py  ntu_viral_mono.launch.py  ntu_viral_stereo.launch.py  subt_mrs_mono.launch.py
DL-VINS/src/dl_vins/msg/: FeatureObservations.msg  FrameDescriptors.msg
DL-VINS/src/dl_vins/src/: dl_vins_component.cpp  feature_tracker_component.cpp
DL-VINS/src/dl_vins/src/backend/: backend_factory.cpp  ceres_backend.cpp
DL-VINS/src/dl_vins/src/estimator/: estimator.cpp
DL-VINS/src/dl_vins/src/feature/: dense_extractor.cpp  descriptor_head.cpp  descriptor_matcher.cpp  feature_extractor.cpp  feature_manager.cpp  feature_tracker.cpp  lightglue_matcher.cpp  type_conv_helper.cu
DL-VINS/src/dl_vins/src/initial/: initial_alignment.cpp  initial_sfm.cpp  motion_estimator.cpp
DL-VINS/src/dl_vins/src/utility/: debug_visualizer.cpp
DL-VINS/src/dl_vins/weights/: README.md
DL-VINS/src/loop_fusion/: CMakeLists.txt  package.xml
DL-VINS/src/loop_fusion/config/: loop_fusion_botanic_garden.yaml  loop_fusion_euroc.yaml  loop_fusion_ntu_viral.yaml  loop_fusion_subt_mrs.yaml
DL-VINS/src/loop_fusion/include/loop_fusion/: dino_vpr.hpp  dino_vpr_preprocess.cuh  keyframe.hpp  loop_fusion_component.hpp  parameters.hpp  pose_graph.hpp  vlad.hpp
DL-VINS/src/loop_fusion/src/: dino_vpr.cpp  dino_vpr_preprocess.cu  keyframe.cpp  loop_fusion_component.cpp  pose_graph.cpp  vlad.cpp
DL-VINS/src/loop_fusion/src/utility/: camera_pose_visualization.cpp  utility.cpp
(+14665 files in other folders)
